minimal web server Working. '+' char still needs to be converted to <space>

--- a/nodemcu/index.htm
+++ b/nodemcu/index.htm
@@ -28,6 +28,6 @@ Mem=%d
 </form> 
 <br>
 <h1>Console</h1>
-<iframe name="Console" src="output.htm"></iframe> 
+<iframe name="Console" src="output.htm" width="100%"></iframe> 
 </body>
 </html>
