fixed ultrasound+pwm stability issue

--- a/nodemcu/index.htm
+++ b/nodemcu/index.htm
@@ -10,7 +10,7 @@ IP=%s
 <br>
 Mem=%d
 <br>
-<image src="http://bit.ly/1Or5bob" alt="NodeMCU pins" width="106" height="70">
+<image src="http://bit.ly/2kBQWkw" alt="NodeMCU pins" width="512">
 <form action="output.htm" target="Console">
   <fieldset>
     <legend>GPIO</legend>
