better parsing of day schedules

--- a/nodemcu/index.htm
+++ b/nodemcu/index.htm
@@ -11,12 +11,12 @@
 <td><form action="soff.htm" target="sf"><input type="submit" value="Off"></form></td>
 </tr></table>
 <br>
-<form action="sp.htm" target="sf">
-  <fieldset>
-    <legend>Schedule</legend>
-    %s
-    <input type="submit" value="Ok">
-  </fieldset>
+<form action="sp.htm">
+<fieldset>
+<legend>Schedule</legend>
+%s
+<input type="submit" value="Ok">
+</fieldset>
 </form> 
 <br>
 </body>
