fixed input text width issue

--- a/nodemcu/index.htm
+++ b/nodemcu/index.htm
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <body>
-<iframe name="sf" src="su.htm" width="320" height="120"></iframe>
+<iframe name="sf" src="su.htm" width="100%%" height="120"></iframe>
 <br>
 <table><tr>
 <td><form action="son.htm" target="sf"><input type="submit" value="On"></form></td>
