reworking web response server

--- a/esp32/web/TiHomeManager.html
+++ b/esp32/web/TiHomeManager.html
@@ -10,8 +10,7 @@ let home={
   ]
 };
 </script>
-<script src=></script>
-
+<script src="https://raw.githubusercontent.com/carrardt/TiPiDuino/refs/heads/main/esp32/web/TiHomeManager.js"></script>
 </body>
 </html>
 
