--- a/esp32/web/led_on_off.html
+++ b/esp32/web/led_on_off.html
@@ -3,6 +3,6 @@
   h1{color: #0F3376; padding: 2vh;}p{font-size: 1.5rem;}.button{display: inline-block; background-color: #e7bd3b; border: none; 
   border-radius: 4px; color: white; padding: 16px 40px; text-decoration: none; font-size: 30px; margin: 2px; cursor: pointer;}
   .button2{background-color: #4286f4;}</style></head><body> <h1>ESP Web Server</h1> 
-  <p>GPIO state: <strong>%s</strong></p><p><a href="/?led=on"><button class="button">ON</button></a></p>
-  <p><a href="/?led=off"><button class="button button2">OFF</button></a></p></body></html>
+  <p>GPIO state: <strong>OFF</strong></p><p><a href="index.html?led=on"><button class="button">ON</button></a></p>
+  <p><a href="index.html?led=off&action=closewindow"><button class="button button2">OFF</button></a></p></body></html>
 
