load data description as an html json node

--- a/esp32/web/TiHomeManager.html
+++ b/esp32/web/TiHomeManager.html
@@ -1,16 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<script>
-let home={
-  "heatzones":
-  [ {"state":"C","schedule":["FOOCEEFFECECEOCOCCEFEFEOECCEEECOEOCCOOEFFFOEFCCOEEEFEOCECECFOOFEOECOCOFEFCFFEFCEOFFOCFEOEFEEEOCO","EFECFEFFECEFCECCEEFCCEOOECFFECCCECFCFECFOOFECFFFOEEFFOFOOOOFEFFCECOOEEOEFCOECOEOECOCFCEFCFFOEECC","FCOFCEOOOOCEOCFOOEEOCCCEFEEOCEECOFEEEFECFFFECCFCEEFCCEFOFEEFCOCCFFEEOOEFOOEEEFFEOCOOCOFECCFFCCCC","EEOECCOEOOOCCCOEEOFEECCCCCEEOEEECEEEFOOOOEEEECCCFFOOOEEOCEFOOEECFFOFOOFFEEOCEFOOECOOECFEECFCOECF","FOOCECOEEEEFOFCOOFEOCEOOOFEFEFOEOOCOOFCEOCOCECEOCCCEFEECEOCCOOCCOEOCCCOEOEFFFCECOOEOFEOOFEOEFOCE","CEEFCOFOEEECOEOOFOOCOOCCFFCEEOOFOCCECOEOFEEEFFOCECEEFCCCFFEOECEOEEECCOFFFOFOCOOEOFECCFCFOOFOCFFF","ECFCOCOECECFFEOEFOFCCOOECOCEOEFCCOEOEEOFECCOECOCFECCCCEFCOOEOFEFCEEEOOFEOOOOOCCFOCEFOFCEEOOEFEFO"]}
-  , {"state":"E","schedule":["FOOCEEFFECECEOCOCCEFEFEOECCEEECOEOCCOOEFFFOEFCCOEEEFEOCECECFOOFEOECOCOFEFCFFEFCEOFFOCFEOEFEEEOCO","EFECFEFFECEFCECCEEFCCEOOECFFECCCECFCFECFOOFECFFFOEEFFOFOOOOFEFFCECOOEEOEFCOECOEOECOCFCEFCFFOEECC","FCOFCEOOOOCEOCFOOEEOCCCEFEEOCEECOFEEEFECFFFECCFCEEFCCEFOFEEFCOCCFFEEOOEFOOEEEFFEOCOOCOFECCFFCCCC","EEOECCOEOOOCCCOEEOFEECCCCCEEOEEECEEEFOOOOEEEECCCFFOOOEEOCEFOOEECFFOFOOFFEEOCEFOOECOOECFEECFCOECF","FOOCECOEEEEFOFCOOFEOCEOOOFEFEFOEOOCOOFCEOCOCECEOCCCEFEECEOCCOOCCOEOCCCOEOEFFFCECOOEOFEOOFEOEFOCE","CEEFCOFOEEECOEOOFOOCOOCCFFCEEOOFOCCECOEOFEEEFFOCECEEFCCCFFEOECEOEEECCOFFFOFOCOOEOFECCFCFOOFOCFFF","ECFCOCOECECFFEOEFOFCCOOECOCEOEFCCOEOEEOFECCOECOCFECCCCEFCOOEOFEFCEEEOOFEOOOOOCCFOCEFOFCEEOOEFEFO"]}
-  , {"state":"F","schedule":["FOOCEEFFECECEOCOCCEFEFEOECCEEECOEOCCOOEFFFOEFCCOEEEFEOCECECFOOFEOECOCOFEFCFFEFCEOFFOCFEOEFEEEOCO","EFECFEFFECEFCECCEEFCCEOOECFFECCCECFCFECFOOFECFFFOEEFFOFOOOOFEFFCECOOEEOEFCOECOEOECOCFCEFCFFOEECC","FCOFCEOOOOCEOCFOOEEOCCCEFEEOCEECOFEEEFECFFFECCFCEEFCCEFOFEEFCOCCFFEEOOEFOOEEEFFEOCOOCOFECCFFCCCC","EEOECCOEOOOCCCOEEOFEECCCCCEEOEEECEEEFOOOOEEEECCCFFOOOEEOCEFOOEECFFOFOOFFEEOCEFOOECOOECFEECFCOECF","FOOCECOEEEEFOFCOOFEOCEOOOFEFEFOEOOCOOFCEOCOCECEOCCCEFEECEOCCOOCCOEOCCCOEOEFFFCECOOEOFEOOFEOEFOCE","CEEFCOFOEEECOEOOFOOCOOCCFFCEEOOFOCCECOEOFEEEFFOCECEEFCCCFFEOECEOEEECCOFFFOFOCOOEOFECCFCFOOFOCFFF","ECFCOCOECECFFEOEFOFCCOOECOCEOEFCCOEOEEOFECCOECOCFECCCCEFCOOEOFEFCEEEOOFEOOOOOCCFOCEFOFCEEOOEFEFO"]}
-  ]
-};
-</script>
-<script src="https://raw.githubusercontent.com/carrardt/TiPiDuino/refs/heads/main/esp32/web/TiHomeManager.js"></script>
+<json id="home_json" style="display:none" src="home.json"></json>
+<script src="TiHomeManager.js"></script>
 </body>
 </html>
-
