trying to find a smart way to store/retreive json object stored on server side

--- a/esp32/web/TiHomeManager.html
+++ b/esp32/web/TiHomeManager.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <body>
-<json id="home_json" style="display:none" src="home.json"></json>
+<script id="home_js" src="home.js"></script>
 <script src="TiHomeManager.js"></script>
 </body>
 </html>
+
+<!-- style="display:none" -->
