--- a/esp32/web/setup-wifi.html
+++ b/esp32/web/setup-wifi.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
 <html>
 <body>
-
-<h2>TiHome configuration</h2>
-
+<h2>Wifi configuration</h2>
 <form action="/setup_wifi_config.py">
   <label for="ssid">Wifi SSID:</label><br>
   <input type="text" id="ssid" name="ssid" value="<wifi SSID>"><br>
   <label for="key">Password:</label><br>
-  <input type="text" id="key" name="key" value="<wifi password>"><br><br>
+  <input type="text" id="key" name="key" value="<wifi password>"><br>
   <label for="host">Host name:</label><br>
   <input type="text" id="host" name="host" value="TiHomeManager"><br><br>
   <input type="submit" value="Submit">
 </form> 
-
 </body>
 </html>
 
